# Engine_Alpha

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: Display.cpp  Display.h  Engine_AlphaConfig.h  Engine_AlphaConfig.h.in  includes.h  main.cpp  main.h
src/mesh/: Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
src/shader/: Shader.cpp  basicShader.glfs  basicShader.glvs
src/shaders/: Shader.cpp  Shader.h  basicShader.glfs
